# graphics-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  DOCKERFILE  Dockerfile  LICENSE  README.md
.github/workflows/: build.yml  build_release.yml  docker-publish.yml
assets/shaders/: text.fs  text.vs
core/: CMakeLists.txt  camera.cpp  engine.h
core/constants/: core_constants.h
core/core_structure/: CMakelists.txt
core/core_structure/collision_body/include/: collision_body.h
core/core_structure/collision_body/src/: collision_body.cpp
core/core_structure/drawable/include/: drawable2d.h
core/font/src/: font.cpp
core/include/: engine.h
core/include/GF_ENGINE/: engine.h
core/input/: CMakeLists.txt
core/input/include/: input.h
core/input/src/: input.cpp
core/math/: CMakeLists.txt
core/math/include/: vector2.h  vector3.h
core/node/: CMakeLists.txt
core/node/camera/include/: camera.h
core/node/camera/src/: camera.cpp
core/node/character_body_2d/include/: character_body_2d.h
core/node/character_body_2d/src/: character_body_2d.cpp
core/node/collision_body/include/: collision_body.h
core/node/collision_body/src/: collision_body.cpp
core/node/drawable/include/: collision_shape_2d.h  drawable2d.h
core/node/input/include/: input.h
core/node/label/include/: label.h
core/node/label/src/: label.cpp
core/node/text/include/: text.h  text_shader.h
core/node/text/src/: text.cpp
core/render/: CMakeLists.txt
core/render/include/: shader.h  texture.h
core/render/src/: shader.cpp
core/resource_manager/: CMakeLists.txt
core/resource_manager/include/: resource_manager.h
core/resource_manager/src/: resource_manager.cpp
core/shaders/: text.vs
core/src/: engine.cpp
core/utils/: CMakeLists.txt
core/utils/include/: bounded_counter.h
engine/: app.cpp  app.h  camera.cpp  constants.h  font.cpp  font.h  label.cpp  label.hpp  main.cpp  resource_manager.cpp  resource_manager.h  shader_paths.hpp  text.cpp  text.h  texture.cpp
engine/font/: CMakeLists.txt
engine/font/include/: font.h
engine/math/: CMakeLists.txt
engine/math/src/: vector2.cpp  vector3.cpp
engine/node/character_body_2d/include/: character_body.h  character_body_2d.h
engine/node/character_body_2d/src/: character_body_2d.cpp
engine/node/collision_body/include/: collision_body.h
engine/node/drawable/include/: drawable2d.h
engine/node/label/include/: label.h
engine/node/label/src/: label.cpp
engine/node/text/include/: text.h
engine/node/text/src/: text.cpp
engine/player/: player.h
engine/render/: CMakeLists.txt
engine/render/include/: shader.h
engine/render/src/: shader.cpp  texture.cpp
engine/resource_manager/src/: resource_manager.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
src/: app.cpp  app.h  constants.h  main.cpp  shader.h
src/math/include/: vector2.h  vector3.h
src/math/src/: vector2.cpp  vector3.cpp
src/vectors/: vector2.h
test_app/: app.h  constants.h  main.cpp
test_app/player/: player.h
